Description of -XX:+PrintFlagsRanges is incorrect

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • None
    • b14

      In globals.hpp it says the following about PrintFlagsRanges:

        product(bool, PrintFlagsRanges, false, \
                "Print VM flags and their ranges and exit VM")

      PrintFlagsRanges does print flags and ranges but does not exit the VM. The text in globals.hpp should be corrected .

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Harold Seigel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: