8221096: Description of -XX:+PrintFlagsRanges is incorrect

Remove the phrase: and exit VM

Reviewed-by: lfoltan